# CUDA

./: BUILD.md  CMakeLists.txt  CMakePresets.json  Instalacion.md  README.md
ejercicios/: hello.cu  hola.cu  saxpy.cu
src/: common.h  reduction.cu  vec_add.cu
